# fastapi_backend

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
app/: main.py  schema.py
